--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
   </head>
   <body>
- 
+    <img src="large.jpg">
     <h1>Welcome to Julian's Programming Portfolio</h1>
 
   </body>
