--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Julian's Programming Portfolio</title>
   </head>
   <body>
-    <img src="large.jpg">
+    <img src="PREMADEcsc106_banner.jpg">
     <h1>Welcome to Julian's Programming Portfolio</h1>
-
+    <p> <strong>Hello!</strong> <br>
+      This is where I will be posting my Computer Science projects and code. </p>
   </body>
  </html>
