--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <img src="PREMADEcsc106_banner.jpg">
     <h1>Welcome to Julian's Programming Portfolio</h1>
     <p> <strong>Hello!</strong> <br>
-      This is where I will be posting my Computer Science projects and code. </p>
+      My name is Julian Spring, and I am a freshman at the University of Rhode Island. This is where I will be posting my Computer Science projects and code. </p>
   </body>
  </html>
