--- a/about.html
+++ b/about.html
@@ -7,8 +7,10 @@
     <body>
         <img src="PREMADEcsc106_banner.jpg">
         <h1>About Me</h1>
-        <p>Hi! My name is Julian Spring, I'm from a small town in Massachussetts called North Andover, and I've lived there my entire life.<br>
-            I am a freshman studying computer science at the University of Rhode Island. I love baseball and basketball and all Boston sports teams, especially the Red Sox and the Patriots. My hobbies include building computers, playing video games, and fishing.</p>
+        <p>Hi! My name is Julian Spring, I'm from a small town in Massachussetts called North Andover, and I've lived there my entire<br>
+            life. I am a freshman studying computer science at the University of Rhode Island. I love baseball and basketball and all<br>
+            Boston sports teams, especially the Red Sox and the Patriots. My hobbies include building computers, playing video games,<br>
+            and fishing.</p>
         back to <a href="index.html"> home page </a>
     </body>
 </html>
