--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
       <title>Julian's Javascript Page</title>
   </head>
   <body>
-  <img src="large.jpg">
+  <img src="PREMADEcsc106_banner.jpg">
   <h1>My Javascript</h1>
   back to <a href="index.html"> home page </a>
   </body>
