--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
   </head>
   <body>
-    <img src="PREMADEcsc106_banner.jpg">
+    <img src="PREMADEcsc106_banner.jpg"> <br>
     <a href="index.html"> <img src="home.png"> </a>
     <a href="javascripts.html"> <img src="javascripts.png"> </a>
     <a href="apps.html"> <img src="apps.png"> </a>
