--- a/about.html
+++ b/about.html
@@ -5,9 +5,13 @@
         <title>About Julian</title>
     </head>
     <body>
-        <img src="PREMADEcsc106_banner.jpg">
-        <h1>About Me</h1>
-        <p>Hi! My name is Julian Spring, I'm from a small town in Massachussetts called North Andover, and I've lived there my entire<br>
+      <img src="PREMADEcsc106_banner.jpg"> <br>
+        <a href="index.html"> <img src="home.png"> </a>
+        <a href="javascripts.html"> <img src="javascripts.png"> </a>
+        <a href="apps.html"> <img src="apps.png"> </a>
+        <a href="about.html"> <img src="about.png"> </a>
+      <h1>About Me</h1>
+      <p>Hi! My name is Julian Spring, I'm from a small town in Massachussetts called North Andover, and I've lived there my entire<br>
             life. I am a freshman studying computer science at the University of Rhode Island. I love baseball and basketball and all<br>
             Boston sports teams, especially the Red Sox and the Patriots. My hobbies include building computers, playing video games,<br>
             and fishing.</p>
