--- a/apps.html
+++ b/apps.html
@@ -6,6 +6,10 @@
   </head>
   <body>
   <img src="PREMADEcsc106_banner.jpg">
+        <a href="index.html"> <img src="home.png"> </a>
+        <a href="javascripts.html"> <img src="javascripts.png"> </a>
+        <a href="apps.html"> <img src="apps.png"> </a>
+        <a href="about.html"> <img src="about.png"> </a>
   <h1>My Apps</h1>
   <p>I don't have any right now but, when I do program apps, this is where they'll be stored!</p>
   back to <a href="index.html"> home page </a>
