--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,11 @@
       <title>Julian's Javascript Page</title>
   </head>
   <body>
-  <img src="PREMADEcsc106_banner.jpg">
+  <img src="PREMADEcsc106_banner.jpg"> <br>
+        <a href="index.html"> <img src="home.png"> </a>
+        <a href="javascripts.html"> <img src="javascripts.png"> </a>
+        <a href="apps.html"> <img src="apps.png"> </a>
+        <a href="about.html"> <img src="about.png"> </a>
   <h1>My Javascript</h1>
   back to <a href="index.html"> home page </a>
   </body>
