--- a/javascripts.html
+++ b/javascripts.html
@@ -11,6 +11,7 @@
         <a href="apps.html"> <img src="apps.png"> </a>
         <a href="about.html"> <img src="about.png"> </a>
   <h1>My Javascript</h1>
+    <p>This is where I will be posting future links to my Javascript programs.</p>
   back to <a href="index.html"> home page </a>
   </body>
 </html>
