--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
         <a href="apps.html"> <img src="apps.png"> </a>
         <a href="about.html"> <img src="about.png"> </a>
       <h1>About Me</h1>
-      <p>Hi! My name is Julian Spring, I'm from a small town in Massachussetts called North Andover, and I've lived there my entire<br>
-            life. I am a freshman studying computer science at the University of Rhode Island. I love baseball and basketball and all<br>
-            Boston sports teams, especially the Red Sox and the Patriots. My hobbies include building computers, playing video games,<br>
-            and fishing.</p>
+      <p>Hi! My name is Julian Spring, I'm from Massachussetts, and I've lived there my entire life. I am <br>
+         a freshman studying computer science at the University of Rhode Island. I love baseball and basketball<br>
+         and all Boston sports teams, especially the Red Sox and the Patriots. My hobbies include building computers,<br>
+         playing video games, and fishing.</p>
         back to <a href="index.html"> home page </a>
     </body>
 </html>
