--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset-"utf-8">
     <title>Julian's Programming Portfolio</title>
+    <style>
+      body {
+      background-image: "myBackground.jpg";
+        }
+    </style>
   </head>
   <body>
     <img src="PREMADEcsc106_banner.jpg"> <br>
