--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset-"utf-8">
     <title>Julian's Programming Portfolio</title>
     <style>
-      body {
-      background-image: "myBackground.jpg";
+      .body {
+      background-image: img="myBackground.jpg"
         }
     </style>
   </head>
@@ -21,3 +21,4 @@
       Computer Science projects and code. </p>
   </body>
  </html>
+
