--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset-"utf-8">
     <title>Julian's Programming Portfolio</title>
     <style>
-      .body {
+      body {
       background-image: img="myBackground.jpg"
         }
     </style>
