--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
     <style>
       body {
-      background-image: "myBackground.jpg";
+      background: img="myBackground.jpg";
         }
     </style>
   </head>
