--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
     <style>
       body {
-      background: img="myBackground.jpg";
+      background-color: rgb(4, 51, 128);
         }
     </style>
   </head>
