--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
     <style>
       body {
-      background-image: "myBackground.jpg";
+      background-color: rgb(4, 51, 128);
         }
     </style>
   </head>
@@ -21,4 +21,3 @@
       Computer Science projects and code. </p>
   </body>
  </html>
-
