--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
     <style>
       body {
-      background-imager: url("myBackground.jpg");
+      background-image: url("myBackground.jpg");
         }
     </style>
   </head>
