--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <style>
       body {
       background-image: url("myBackground.jpg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
         }
     </style>
   </head>
