--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       body {
       background-image: url("myBackground.jpg");
       background-repeat: no-repeat;
+      background-color: rgb(4, 51, 128);
       background-position: center;
       background-size: cover;
         }
