--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Julian's Programming Portfolio</title>
     <style>
       body {
-      background-image: url("myBackground.jpg");
+      background-image: url("myBackground.JPG");
       background-repeat: no-repeat;
       background-color: rgb(4, 51, 128);
       background-position: center;
