--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
     <title>Julian's Programming Portfolio</title>
     <style>
       body {
-      background-image: url("myBackground.JPG");
-      background-repeat: no-repeat;
-      background-color: rgb(4, 51, 128);
-      background-position: center;
-      background-size: cover;
+         background-image: url("myBackground.JPG");
+         background-repeat: no-repeat;
+         background-color: rgb(4, 51, 128);
+         background-position: center;
+         background-size: cover;
         }
+      h1 {
+         color: rgb(255,255,255);
+         text-align: center;
+      }
+      p {
+         color: rgb(255,255,255);
+         text-align: center;
+      }
+      
     </style>
   </head>
   <body>
-    <img src="PREMADEcsc106_banner.jpg"> <br>
-    <a href="index.html"> <img src="home.png"> </a>
-    <a href="javascripts.html"> <img src="javascripts.png"> </a>
-    <a href="apps.html"> <img src="apps.png"> </a>
-    <a href="about.html"> <img src="about.png"> </a>
+    <id="banner" img src="PREMADEcsc106_banner.jpg"> <br>
+    <a href="index.html"> <id="home" img src="home.png"> </a>
+    <a href="javascripts.html"> <id="javascripts" img src="javascripts.png"> </a>
+    <a href="apps.html"> <id="apps" img src="apps.png"> </a>
+    <a href="about.html"> <id="about" img src="about.png"> </a>
     <h1>Welcome to Julian's Programming Portfolio</h1>
     <p> <strong>Hello!</strong> <br>
       My name is Julian Spring, and I am a freshman at the University of Rhode Island. This is where I will be posting my <br>
