--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </style>
   </head>
   <body>
-    <id="banner" img src="PREMADEcsc106_banner.jpg"> <br>
-    <a href="index.html"> <id="home" img src="home.png"> </a>
-    <a href="javascripts.html"> <id="javascripts" img src="javascripts.png"> </a>
-    <a href="apps.html"> <id="apps" img src="apps.png"> </a>
-    <a href="about.html"> <id="about" img src="about.png"> </a>
+    <img src="PREMADEcsc106_banner.jpg" id="banner"> <br>
+    <a href="index.html" id="home"> <img src="home.png"> </a>
+    <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
+    <a href="apps.html" id="apps"> <img src="apps.png"> </a>
+    <a href="about.html" id="about"> <img src="about.png"> </a>
     <h1>Welcome to Julian's Programming Portfolio</h1>
     <p> <strong>Hello!</strong> <br>
       My name is Julian Spring, and I am a freshman at the University of Rhode Island. This is where I will be posting my <br>
