--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
          color: rgb(255,255,255);
          text-align: center;
       }
-      
+      #banner {
+         position: center;
+      }
     </style>
   </head>
   <body>
