--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          text-align: center;
       }
       #banner {
-         position: center;
+         align: center;
       }
     </style>
   </head>
