--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
          text-align: center;
       }
       #banner {
-         margin: auto;
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+         
       }
     </style>
   </head>
