--- a/about.html
+++ b/about.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>About Julian</title>
-    </head>
-    <body>
-      <img src="PREMADEcsc106_banner.jpg"> <br>
-        <a href="index.html"> <img src="home.png"> </a>
-        <a href="javascripts.html"> <img src="javascripts.png"> </a>
-        <a href="apps.html"> <img src="apps.png"> </a>
-        <a href="about.html"> <img src="about.png"> </a>
-      <h1>About Me</h1>
-      <p>Hi! My name is Julian Spring, I'm from Massachussetts, and I've lived there my entire life. I am <br>
+  <head>
+      <meta charset="utf-8">
+      <title>About Julian</title>
+    <style>
+      body {
+         background-image: url("myBackground.JPG");
+         background-repeat: no-repeat;
+         background-color: rgb(4, 51, 128);
+         background-position: center;
+         background-size: cover;
+        }
+      h1 {
+         color: rgb(255,255,255);
+         text-align: center;
+      }
+      p {
+         color: rgb(255,255,255);
+         text-align: center;
+      }
+      img {
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+         
+      }
+    </style>
+  </head>
+  <body>
+  <img src="PREMADEcsc106_banner.jpg" id="banner"> <br>
+        <a href="index.html" id="home"> <img src="home.png"> </a>
+        <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
+        <a href="apps.html id="apps"" id="apps"> <img src="apps.png"> </a>
+        <a href="about.html" id="about"> <img src="about.png"> </a>
+  <h1>About Me</h1>
+    <p>Hi! My name is Julian Spring, I'm from Massachussetts, and I've lived there my entire life. I am <br>
          a freshman studying computer science at the University of Rhode Island. I love baseball and basketball<br>
          and all Boston sports teams, especially the Red Sox and the Patriots. My hobbies include building computers,<br>
          playing video games, and fishing.</p>
-        back to <a href="index.html"> home page </a>
-    </body>
+  back to <a href="index.html"> home page </a>
+  </body>
 </html>
