--- a/apps.html
+++ b/apps.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-      <title>Julian's App Page</title>
+    <meta charset-"utf-8">
+    <title>Julian's App Page</title>
     <style>
       body {
          background-image: url("myBackground.JPG");
@@ -28,13 +28,13 @@
     </style>
   </head>
   <body>
-  <img src="PREMADEcsc106_banner.jpg" id="banner"> <br>
-        <a href="index.html" id="home"> <img src="home.png"> </a>
-        <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-        <a href="apps.html id="apps"" id="apps"> <img src="apps.png"> </a>
-        <a href="about.html" id="about"> <img src="about.png"> </a>
-  <h1>My Apps</h1>
+    <img src="PREMADEcsc106_banner.jpg" id="banner"> <br>
+    <a href="index.html" id="home"> <img src="home.png"> </a>
+    <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
+    <a href="apps.html" id="apps"> <img src="apps.png"> </a>
+    <a href="about.html" id="about"> <img src="about.png"> </a>
+    <h1>My Apps</h1>
     <p>I don't have any right now but, when I do program apps, this is where they'll be stored!</p>
-  back to <a href="index.html"> home page </a>
+ back to <a href="index.html"> home page </a>
   </body>
-</html>
+ </html>
