--- a/apps.html
+++ b/apps.html
@@ -31,7 +31,7 @@
     <img src="PREMADEcsc106_banner.jpg" id="banner"> <br>
     <a href="index.html" id="home"> <img src="home.png"> </a>
     <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-    <a url="https://jjspring.github.io/apps.html=" id="apps"> <img src="apps.png"> </a>
+    <a href="apps.html" id="apps"> <img src="apps.png"> </a>
     <a href="about.html" id="about"> <img src="about.png"> </a>
     <h1>My Apps</h1>
     <p>I don't have any right now but, when I do program apps, this is where they'll be stored!</p>
