--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-  <img src="PREMADEcsc106_banner.jpg" id="banner"> <br>
+  <img src="myBanner.jpg" id="banner"> <br>
         <a href="index.html" id="home"> <img src="home.png"> </a>
         <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
         <a href="apps.html id="apps"" id="apps"> <img src="apps.png"> </a>
