--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <img src="myBanner.jpg" id="banner"> <br>
         <a href="index.html" id="home"> <img src="home.png"> </a>
         <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-        <a href="apps.html id="apps"" id="apps"> <img src="apps.png"> </a>
+        <a href="apps.html" id="apps"> <img src="apps.png"> </a>
         <a href="about.html" id="about"> <img src="about.png"> </a>
   <h1>About Me</h1>
     <p>Hi! My name is Julian Spring, I'm from Massachussetts, and I've lived there my entire life. I am <br>
