--- a/javascripts.html
+++ b/javascripts.html
@@ -31,7 +31,7 @@
   <img src="myBanner.jpg" id="banner"> <br>
         <a href="index.html" id="home"> <img src="home.png"> </a>
         <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-        <a href="apps.html id="apps"> <img src="apps.png"> </a>
+        <a href="apps.html" id="apps"> <img src="apps.png"> </a>
         <a href="about.html" id="about"> <img src="about.png"> </a>
   <h1>My Javascript</h1>
     <p>This is where I will be posting future links to my Javascript programs.</p>
