--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          color: rgb(255,255,255);
          text-align: center;
       }
-      img {
+      #banner {
          display: block;
          margin-left: auto;
          margin-right: auto;
