--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
-    <table> 
+    <table cellspacing="10" align="center"> 
       <tbody> 
         <tr>
           <td>
