--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
          display: block;
          margin-left: auto;
          margin-right: auto;
-         
+      table {
+        margin-left: auto;
+        margin-right: auto;
+        cellspacing: 10;
       }
     </style>
   </head>
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
-    <table cellspacing="10" align="center"> 
+    <table> 
       <tbody> 
         <tr>
           <td>
