--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       table {
         margin-left: auto;
         margin-right: auto;
-        cellspacing: 10;
+        cellspacing: 10px;
       }
     </style>
   </head>
