--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       table {
         margin-left: auto;
         margin-right: auto;
-        cellspacing: 10px;
+        cellspacing: 10;
       }
     </style>
   </head>
