--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
          text-align: center;
       }
       #banner {
+         display: block;
          margin-left: auto;
          margin-right: auto;
       table {
