--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
     <table> 
+      <thead>
+        <tr>
+          <td>Links</td>
+        </tr>
       <tbody> 
         <tr>
-          <td>
-             <a href="index.html" id="home"> <img src="home.png"> </a>
-             <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-             <a href="apps.html" id="apps"> <img src="apps.png"> </a>
-             <a href="about.html" id="about"> <img src="about.png"> </a>
-          </td>
+          <td><a href="index.html" id="home"> <img src="home.png"> </a></td>
+          <td><a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a></td>
+          <td><a href="apps.html" id="apps"> <img src="apps.png"> </a></td>
+          <td><a href="about.html" id="about"> <img src="about.png"> </a></td>
         </tr>
       </tbody>
     </table>
