--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
          margin-left: auto;
          margin-right: auto;
       table {
-        margin-left: auto;
-        margin-right: auto;
-        cellspacing: 10;
+        align: center;
+        cellspacing: 20;
       }
     </style>
   </head>
