--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          margin-left: auto;
          margin-right: auto;
       table {
-        align: center;
+        align: right;
         cellspacing: 20;
         width: 400;
       }
