--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
          margin-left: auto;
          margin-right: auto;
       table {
-        align: right;
         cellspacing: 20;
         width: 400;
       }
@@ -32,11 +31,7 @@
   </head>
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
-    <table> 
-      <thead>
-        <tr>
-          <td>Links</td>
-        </tr>
+    <table align:"center"> 
       <tbody> 
         <tr>
           <td><a href="index.html" id="home"> <img src="home.png"> </a></td>
