--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
          margin-right: auto;
       table {
         cellspacing: 20;
+        margin-left: auto;
+        margin-right: auto;
         width: 400;
       }
     </style>
