--- a/index.html
+++ b/index.html
@@ -3,37 +3,10 @@
   <head>
     <meta charset-"utf-8">
     <title>Julian's Programming Portfolio</title>
-    <style>
-      body {
-         background-image: url("myBackground.JPG");
-         background-repeat: no-repeat;
-         background-color: rgb(4, 51, 128);
-         background-position: center;
-         background-size: cover;
-        }
-      h1 {
-         color: rgb(255,255,255);
-         text-align: center;
-      }
-      p {
-         color: rgb(255,255,255);
-         text-align: center;
-      }
-      #banner {
-         display: block;
-         margin-left: auto;
-         margin-right: auto;
-      table {
-        cellspacing: 20;
-        margin-left: auto;
-        margin-right: auto;
-        width: 400;
-      }
-    </style>
   </head>
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
-    <table align:"center">
+    <table>
         <tr>
           <td><a href="index.html" id="home"><img src="home.png"></a></td>
           <td><a href="javascripts.html" id="javascripts"><img src="javascripts.png"></a></td>
