--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset-"utf-8">
     <title>Julian's Programming Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
