--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <img src="myBanner.jpg" id="banner"> <br>
-    <table>
+    <table id="nav-table">
         <tr>
-          <td><a href="index.html" id="home"><img src="home.png"></a></td>
-          <td><a href="javascripts.html" id="javascripts"><img src="javascripts.png"></a></td>
-          <td><a href="apps.html" id="apps"><img src="apps.png"></a></td>
-          <td><a href="about.html" id="about"><img src="about.png"></a></td>
+          <td><a href="index.html"><img src="home.png"></a></td>
+          <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td><a href="apps.html"><img src="apps.png"></a></td>
+          <td><a href="about.html"><img src="about.png"></a></td>
         </tr>
     </table>
     <h1>Welcome to Julian's Programming Portfolio</h1>
