--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <img src="myBanner.jpg" id="banner"> <br>
     <table id="nav-table">
         <tr>
-          <td><a href="index.html"><img src="home.png"></a></td>
-          <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
-          <td><a href="apps.html"><img src="apps.png"></a></td>
-          <td><a href="about.html"><img src="about.png"></a></td>
+          <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
+          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
+          <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
         </tr>
     </table>
     <h1>Welcome to Julian's Programming Portfolio</h1>
