--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Julian's Programming Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  
   <body>
-    <img src="myBanner.jpg" id="banner"> <br>
+    <img src="myBanner.jpg" id="banner">
+    
     <table id="nav-table">
         <tr>
           <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
@@ -15,6 +17,7 @@
           <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
         </tr>
     </table>
+    
     <h1>Welcome to Julian's Programming Portfolio</h1>
     <p> <strong>Hello!</strong> <br>
       My name is Julian Spring, and I am a freshman at the University of Rhode Island. This is where I will be posting my <br>
