--- a/about.html
+++ b/about.html
@@ -3,29 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>About Julian</title>
-    <style>
-      body {
-         background-image: url("myBackground.JPG");
-         background-repeat: no-repeat;
-         background-color: rgb(4, 51, 128);
-         background-position: center;
-         background-size: cover;
-        }
-      h1 {
-         color: rgb(255,255,255);
-         text-align: center;
-      }
-      p {
-         color: rgb(255,255,255);
-         text-align: center;
-      }
-      img {
-         display: block;
-         margin-left: auto;
-         margin-right: auto;
-         
-      }
-    </style>
+      <link ref="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
   <img src="myBanner.jpg" id="banner"> <br>
