--- a/about.html
+++ b/about.html
@@ -7,10 +7,14 @@
   </head>
   <body>
   <img src="myBanner.jpg" id="banner"> <br>
-        <a href="index.html" id="home"> <img src="home.png"> </a>
-        <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-        <a href="apps.html" id="apps"> <img src="apps.png"> </a>
-        <a href="about.html" id="about"> <img src="about.png"> </a>
+ <table id="nav-table">
+        <tr>
+          <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
+          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
+          <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
+        </tr>
+    </table>
   <h1>About Me</h1>
     <p>Hi! My name is Julian Spring, I'm from Massachussetts, and I've lived there my entire life. I am <br>
          a freshman studying computer science at the University of Rhode Island. I love baseball and basketball<br>
