--- a/javascripts.html
+++ b/javascripts.html
@@ -3,36 +3,18 @@
   <head>
       <meta charset="utf-8">
       <title>Julian's Javascript Page</title>
-    <style>
-      body {
-         background-image: url("myBackground.JPG");
-         background-repeat: no-repeat;
-         background-color: rgb(4, 51, 128);
-         background-position: center;
-         background-size: cover;
-        }
-      h1 {
-         color: rgb(255,255,255);
-         text-align: center;
-      }
-      p {
-         color: rgb(255,255,255);
-         text-align: center;
-      }
-      img {
-         display: block;
-         margin-left: auto;
-         margin-right: auto;
-         
-      }
-    </style>
+   <link ref="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
   <img src="myBanner.jpg" id="banner"> <br>
-        <a href="index.html" id="home"> <img src="home.png"> </a>
-        <a href="javascripts.html" id="javascripts"> <img src="javascripts.png"> </a>
-        <a href="apps.html" id="apps"> <img src="apps.png"> </a>
-        <a href="about.html" id="about"> <img src="about.png"> </a>
+       <table id="nav-table">
+        <tr>
+          <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
+          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
+          <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
+        </tr>
+    </table>
   <h1>My Javascript</h1>
     <p>This is where I will be posting future links to my Javascript programs.</p>
   back to <a href="index.html"> home page </a>
