--- a/apps.html
+++ b/apps.html
@@ -6,7 +6,7 @@
     <link ref="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <img src="myBanner.jpg" id="banner"> <br>
+    <img src="myBanner.jpg" id="banner">
     <table id="nav-table">
         <tr>
           <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
