--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>About Julian</title>
-    <a ref="stylesheet" type="text/css" href="style.css"></a>
+    <link ref="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
   <img src="myBanner.jpg" id="banner">
