--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <img src="myBanner.jpg" id="banner">
     
-    <table id="nav-table">
+    <table class="nav-table">
         <tr>
           <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
           <td id="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
