--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   
   <body>
-    <img src="myBanner.jpg" id="banner">
+    <img src="myBanner.jpg" class="banner">
     
     <table class="nav-table">
         <tr>
-          <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
-          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
-          <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
-          <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
+          <td class="nav-td"><a href="index.html"><img src="home.png"></a></td>
+          <td class="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td class="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
+          <td class="nav-td"><a href="about.html"><img src="about.png"></a></td>
         </tr>
     </table>
     
