--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <img src="myBanner.jpg" class="banner">
+    <img src="myBanner.jpg" id="banner">
     
     <table class="nav-table">
         <tr>
