--- a/javascripts.html
+++ b/javascripts.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>Julian's Javascript Page</title>
-   <link ref="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
   <img src="myBanner.jpg" id="banner">
