--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     
     <table class="nav-table">
         <tr>
-          <td class="nav-td"><a href="index.html"><img src="home.png"></a></td>
-          <td class="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
-          <td class="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
-          <td class="nav-td"><a href="about.html"><img src="about.png"></a></td>
+          <td><a href="index.html"><img src="home.png"></a></td>
+          <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td><a href="apps.html"><img src="apps.png"></a></td>
+          <td><a href="about.html"><img src="about.png"></a></td>
         </tr>
     </table>
     
