--- a/javascripts.html
+++ b/javascripts.html
@@ -7,12 +7,12 @@
   </head>
   <body>
   <img src="myBanner.jpg" id="banner">
-       <table id="nav-table">
+       <table class="nav-table">
         <tr>
-          <td id="nav-td"><a href="index.html"><img src="home.png"></a></td>
-          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.png"></a></td>
-          <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
-          <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
+          <td><a href="index.html"><img src="home.png"></a></td>
+          <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
+          <td><a href="apps.html"><img src="apps.png"></a></td>
+          <td><a href="about.html"><img src="about.png"></a></td>
         </tr>
     </table>
   <h1>My Javascript</h1>
