--- a/javascripts.html
+++ b/javascripts.html
@@ -17,6 +17,8 @@
     </table>
   <h1>My Javascript</h1>
     <p>This is where I will be posting future links to my Javascript programs.</p>
+    <script src="spring_dancingBitmoji.js"></script>
+    <script src="spring_racingBitmoji.js"></script>
   back to <a href="index.html"> home page </a>
   </body>
 </html>
