--- a/javascripts.html
+++ b/javascripts.html
@@ -16,9 +16,9 @@
         </tr>
     </table>
   <h1>My Javascript</h1>
-    <p>This is where I will be posting future links to my Javascript programs.</p>
-    <script src="spring_dancingBitmoji.js"></script>
-    <script src="spring_racingBitmoji.js"></script>
+    <p>This is where I will be posting future links to my Javascript programs.</p> <br>
+    <script src="spring_dancingBitmoji.js"></script> <br>
+    <script src="spring_racingBitmoji.js"></script> <br>
   back to <a href="index.html"> home page </a>
   </body>
 </html>
