--- a/javascripts.html
+++ b/javascripts.html
@@ -17,8 +17,8 @@
     </table>
   <h1>My Javascript</h1>
     <p>This is where I will be posting future links to my Javascript programs.</p> <br>
-    <script src="spring_dancingBitmoji.js"></script> <br>
-    <script src="spring_racingBitmoji.js"></script> <br>
+   <h2><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
   back to <a href="index.html"> home page </a>
   </body>
 </html>
