--- a/javascripts.html
+++ b/javascripts.html
@@ -17,9 +17,9 @@
     </table>
   <h1>My Javascript</h1>
     <p>This is where I post links to the Javascript programs I write in CSC 106.</p> <br>
-   <h2><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+   <h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <p id="dancingparagraph">This is my "dancing" bitmoji! Each time the page is refreshed, he changes position.</p>
-    <h2><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2 id="racingheader"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <p id="racingparagraph">This is my racing bitmoji! The outcome is random every time the page is refreshed. Place your bets!</p>    
   back to <a href="index.html"> home page </a>
   </body>
