--- a/javascripts.html
+++ b/javascripts.html
@@ -19,8 +19,8 @@
     <p>This is where I post links to the Javascript programs I write in CSC 106.</p> <br>
     <table class="js-table">
       <tr>
-        <td><h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        <td><h2 id="racingheader"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td id="js-td"><h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td id="js-td"><h2 id="racingheader"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
       </tr>
     </table>
         <p id="dancingparagraph">This is my "dancing" bitmoji! Each time the page is refreshed, he changes position.</p>
