--- a/javascripts.html
+++ b/javascripts.html
@@ -22,9 +22,12 @@
         <td id="js-td"><h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         <td id="js-td"><h2 id="racingheader"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
       </tr>
+      <tr>
+        <td> id="js-td"><p id="dancingparagraph">This is my "dancing" bitmoji! Each time the page is refreshed, he changes position.</p></td>
+        <td id="js-td"><p id="racingparagraph">This is my racing bitmoji! The outcome is random every time the page is refreshed. Place your bets!</p></td>
+      </tr>
     </table>
-        <p id="dancingparagraph">This is my "dancing" bitmoji! Each time the page is refreshed, he changes position.</p>
-        <p id="racingparagraph">This is my racing bitmoji! The outcome is random every time the page is refreshed. Place your bets!</p>    
+    
   back to <a href="index.html"> home page </a>
   </body>
 </html>
