--- a/javascripts.html
+++ b/javascripts.html
@@ -16,7 +16,7 @@
         </tr>
     </table>
   <h1>My Javascript</h1>
-    <p>This is where I post links to the Javascript programs I write in CSC 106.</p> <br>
+    <p id="mainparagraph">This is where I post links to the Javascript programs I write in CSC 106.</p> <br>
     <table class="js-table">
       <tr>
         <td id="js-td"><h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
