--- a/javascripts.html
+++ b/javascripts.html
@@ -19,12 +19,22 @@
     <p>This is where I post links to the Javascript programs I write in CSC 106.</p> <br>
     <table class="js-table">
       <tr>
-        <td id="js-td"><h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        <td id="js-td"><h2 id="racingheader"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><script src="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td id="js-td"><h2 id="dancingheader"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojijs/6649211993686016">spring_dancingBitmoji.js</a></h2><img src="Screenshot (4).png"></td>
+        <td id="js-td"><h2 id="racingheader"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojijs/5219014215958528">spring_racingBitmoji.js</a></h2><img src="Screenshot (3).png"></td>
       </tr>
       <tr>
         <td id="js-td2"><p id="dancingparagraph">This is my "dancing" bitmoji! Each time the page is refreshed, he changes position.</p></td>
         <td id="js-td2"><p id="racingparagraph">This is my racing bitmoji! The outcome is random every time the page is refreshed. Place your bets!</p></td>
+      </tr>
+      <tr> 
+        <td id="js-td2"><h2 id="dancingheader">spring_dancingBitmojiFun.js</h2>
+        <td id="js-td2"><h2 id="racingHeader">spring_racingBitmojiFun.js</h2>
+        <td id="js-td2"><h2 id="bitmojiHeader">spring_bitmojiFun.js</h2>
+      </tr>
+      <tr>
+        <td id="js-td4"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojifunjs/5528934621609984"><img src="Screenshot (5).png"></a></td>
+        <td id="js.td4"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojifunjs/4732263684866048"><img src="Screenshot (6).png"</a></td>
+        <td id="js-td">
       </tr>
     </table>
     
