--- a/javascripts.html
+++ b/javascripts.html
@@ -34,7 +34,7 @@
       <tr>
         <td id="js-td4"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojifunjs/5528934621609984"><img src="Screenshot (5).png"></a></td>
         <td id="js.td4"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojifunjs/4732263684866048"><img src="Screenshot (6).png"</a></td>
-        <td id="js-td">
+        <td id="js-td4"><a href="https://www.khanacademy.org/computer-programming/spring_bitmojifunjs/5903095449747456"><img src="Screenshot (7).png"></a></td>
       </tr>
     </table>
     
