--- a/javascripts.html
+++ b/javascripts.html
@@ -29,12 +29,17 @@
       <tr> 
         <td id="js-td2"><h2 id="dancingheader">spring_dancingBitmojiFun.js</h2>
         <td id="js-td2"><h2 id="racingHeader">spring_racingBitmojiFun.js</h2>
+      </tr>
+      <tr>
+        <td id="js-td"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojifunjs/5528934621609984"><img src="Screenshot (5).png"></a></td>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojifunjs/4732263684866048"><img src="Screenshot (6).png"</a></td>
+
+      </tr>
+      <tr>
         <td id="js-td2"><h2 id="bitmojiHeader">spring_bitmojiFun.js</h2>
       </tr>
       <tr>
-        <td id="js-td4"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojifunjs/5528934621609984"><img src="Screenshot (5).png"></a></td>
-        <td id="js.td4"><a href="https://www.khanacademy.org/computer-programming/spring_racingbitmojifunjs/4732263684866048"><img src="Screenshot (6).png"</a></td>
-        <td id="js-td4"><a href="https://www.khanacademy.org/computer-programming/spring_bitmojifunjs/5903095449747456"><img src="Screenshot (7).png"></a></td>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_bitmojifunjs/5903095449747456"><img src="Screenshot (7).png"></a></td>
       </tr>
     </table>
     
