--- a/javascripts.html
+++ b/javascripts.html
@@ -27,8 +27,8 @@
         <td id="js-td2"><p id="racingparagraph">This is my racing bitmoji! The outcome is random every time the page is refreshed. Place your bets!</p></td>
       </tr>
       <tr> 
-        <td id="js-td2"><h2 id="dancingheader">spring_dancingBitmojiFun.js</h2>
-        <td id="js-td2"><h2 id="racingHeader">spring_racingBitmojiFun.js</h2>
+        <td id="js-td2"><h2 id="dancingheader">spring_dancingBitmojiFun.js</h2></td>
+        <td id="js-td2"><h2 id="racingHeader">spring_racingBitmojiFun.js</h2></td>
       </tr>
       <tr>
         <td id="js-td"><a href="https://www.khanacademy.org/computer-programming/spring_dancingbitmojifunjs/5528934621609984"><img src="Screenshot (5).png"></a></td>
@@ -36,10 +36,18 @@
 
       </tr>
       <tr>
-        <td id="js-td2"><h2 id="bitmojiHeader">spring_bitmojiFun.js</h2>
+        <td id="js-td2"><h2 id="bitmojiHeader">spring_bitmojiFun.js</h2></td>
       </tr>
       <tr>
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_bitmojifunjs/5903095449747456"><img src="Screenshot (7).png"></a></td>
+      </tr>
+      <tr>
+        <td id="js.td2"><h2 id="followHeader">spring_follow.js</h2></td>
+        <td id="js.td2"><h2 id="quizHeader">spring_quiz.js</h2></td>
+      </tr>
+      <tr>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_follow/4669285670289408"><img src="Screenshot (10).png"></a></td>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_quiz/5814337821966336"><img src="Screenshot (9).png"></a></td>
       </tr>
     </table>
     
