--- a/javascripts.html
+++ b/javascripts.html
@@ -49,6 +49,14 @@
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_follow/4669285670289408"><img src="Screenshot (10).png"></a></td>
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_quiz/5814337821966336"><img src="Screenshot (9).png"></a></td>
       </tr>
+      <tr>
+        <td id="js.td2"><h2 id="bitmojiLineHeader">spring_bitmoji_line.js</h2></td>
+        <td id="js.td2"><h2 id="formattedIntHeader">spring_formatted_int.js</h2></td>
+      </tr>
+      <tr>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_bitmoji_line/5528727656562688"><img src="bitmojiLine.png"></a></td>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_formatted_integers/5873148532326400"><img src="formattedIntegers.png"></a></td>
+      </tr>
     </table>
     
   back to <a href="index.html"> home page </a>
