--- a/javascripts.html
+++ b/javascripts.html
@@ -57,6 +57,12 @@
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_bitmoji_line/5528727656562688"><img src="bitmojiLine.png"></a></td>
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_formatted_integers/5873148532326400"><img src="formattedIntegers.png"></a></td>
       </tr>
+      <tr>
+        <td id="js.td2"><h2 id="dryBitmojiHeader">spring_dry_bitmoji</h2></td>
+      </tr>
+      <tr>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-make-it-rain/4642212669784064><img src="dryBitmoji.png"></a></td>
+      </tr>
     </table>
     
   back to <a href="index.html"> home page </a>
