--- a/javascripts.html
+++ b/javascripts.html
@@ -37,9 +37,11 @@
       </tr>
       <tr>
         <td id="js-td2"><h2 id="bitmojiHeader">spring_bitmojiFun.js</h2></td>
+        <td id="js-td2"><h2 id="eduAppHeader">spring_EducationalApp.js</h2></td>
       </tr>
       <tr>
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_bitmojifunjs/5903095449747456"><img src="Screenshot (7).png"></a></td>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_educationalappjs/5561101506281472"><img src="educationalApp.png"></a></td>
       </tr>
       <tr>
         <td id="js.td2"><h2 id="followHeader">spring_follow.js</h2></td>
