--- a/javascripts.html
+++ b/javascripts.html
@@ -67,6 +67,12 @@
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-make-it-rain/4642212669784064"><img src="dryBitmoji.png"></a></td>
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/spring_00drawbitmojijs/5199203237593088"><img src="spring_object.png"></a></td>
       </tr>
+      <tr>
+        <td id="js.td2"><h2 id="froggerHeader">spring_frogger.js</h2></td>
+      </tr>
+      <tr>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/froggerv5/4778141663854592"><img src="spring_frogger.png"></a></td>
+      </tr>
     </table>
     
   back to <a href="index.html"> home page </a>
