--- a/javascripts.html
+++ b/javascripts.html
@@ -69,9 +69,11 @@
       </tr>
       <tr>
         <td id="js.td2"><h2 id="froggerHeader">spring_frogger.js</h2></td>
+        <td id="js.td2"><h2 id="memoryHeader">spring_memory.js</h2></td>
       </tr>
       <tr>
         <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/froggerv5/4778141663854592"><img src="spring_frogger.png"></a></td>
+        <td id="js.td"><a href="https://www.khanacademy.org/computer-programming/memorygamev2/6395973446107136"><img src="memory.png"></a></td>
       </tr>
     </table>
     
