--- a/apps.html
+++ b/apps.html
@@ -13,6 +13,7 @@
           <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
           <td><a href="apps.html"><img src="apps.png"></a></td>
           <td><a href="about.html"><img src="about.png"></a></td>
+          <td><a href="final.html"><img src="FinalButton.png"></a></td>
         </tr>
     </table>
     <h1>My Apps</h1>
