--- a/final.html
+++ b/final.html
@@ -18,8 +18,8 @@
     </table>
   <h1>Space Force!</h1>
    <h2><a href="https://www.khanacademy.org/computer-programming/spacememev5/6632875550064640">Space_Force</a></h2>
-   <script src="https://www.khanacademy.org/computer-programming/spacememev5/6632875550064640/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script> 
-    <p>My partner Aiden Hill and I created this game "Space Force" based on the classic arcade game Space Invaders. To play, you
+   <script src="https://www.khanacademy.org/computer-programming/spacememev5/6632875550064640/embed.js?editor=yes&buttons=yes&author=yes&embed=yes" id="game"></script> 
+    <p id="gameP">My partner Aiden Hill and I created this game "Space Force" based on the classic arcade game Space Invaders. To play, you
     use the left and right arrow keys to move horizontally across the screen and avoid enemy ships, and also you use the space bar
     to shoot projectiles at the enemy ships. If an enemy ship comes in contact with your ship, then you will lose health, and 
     once you lose all of your health, it's Game Over. There are infinite levels in this game, and no limit to the score so play to
